[package]
name = "pobf_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
anyhow = { version = "1.0.71", optional = true }
cmac = "0.7.2"
log = "0.4.17"
pem = "2.0.1"
ring = { version = "0.16.20", optional = true }
x25519-dalek = { version = "1.2.0", optional = true }

[features]
default = ["wasi_support"]
sgx = ["ring"]
sev = ["ring"]
wasi_support = ["x25519-dalek", "anyhow"]
